[project]
name = "listing-api"
version = "0.1.0"
description = "Listing API assignment"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.7, <1.0.0",
    "sqlalchemy>=2.0.37, <3.0.0",
    "psycopg[binary,pool]>=3.2.4, <4.0.0",
    "alembic>=1.14.1, <2.0.0",
    "greenlet>=3.1.1,<4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4, <9.0.0",
    "pytest-asyncio>=0.25.2, <1.0.0",
    "pytest-dotenv>=0.5.2, <1.0.0",
    "testcontainers>=4.9.1",
    "coverage>=7.6.10, <8.0.0",
]
lint = [
    "isort>=5.13.2, <6.0.0",
    "pylint>=3.3.3, <4.0.0",
]

[tool.isort]
profile = "google"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_third_party = ["alembic", "sqlalchemy"]
skip = [".gitignore", ".dockerignore"]

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"

